@@ -52,3 +52,11 @@ This will only work for individual `ModelAdmin` classes registered with their ow
 **Expected value**: `True` or `False`
 
 If you'd like this model admin to be excluded from the menu, set to `False`.
+
+(modeladmin_menu_item_name)=
+
+## `ModelAdmin.menu_item_name`
+
+**Expected value**: A string or `None`
+
+Passed on as the `name` parameter when initialising the `MenuItem` for this class, becoming the `name` attribute value for that instance.
