@@ -92,6 +92,7 @@ Wagtail’s page preview is now available in a side panel within the page editor
  * Switch all report workflow, redirects, site settings views to use Wagtail’s reusable header component (Paarth Agarwal)
  * Add support for Twitter and other text-only embeds in Draftail embed previews (Iman Syed, Paarth Agarwal)
  * Use new modal dialog component for privacy settings modal (Sage Abdullah)
+ * Add `menu_item_name` to modify MenuItem's name for ModelAdmin (Alexander Rogovskyy, Vu Pham)
 
 ### Bug fixes
 
