@@ -23,6 +23,7 @@ class ModelAdminMenuItem(MenuItem):
         super().__init__(
             label=model_admin.get_menu_label(),
             url=url,
+            name=model_admin.get_menu_item_name(),
             classnames=classnames,
             icon_name=icon_name,
             order=order,
@@ -50,6 +51,7 @@ class GroupMenuItem(SubmenuMenuItem):
         super().__init__(
             label=modeladmingroup.get_menu_label(),
             menu=menu,
+            name=modeladmingroup.get_menu_item_name(),
             classnames=classnames,
             icon_name=icon_name,
             order=order,
