@@ -104,6 +104,7 @@ class ModelAdmin(WagtailRegisterable):
 
     model = None
     menu_label = None
+    menu_item_name = None
     menu_icon = None
     menu_order = None
     list_display = ("__str__",)
@@ -215,6 +216,12 @@ class ModelAdmin(WagtailRegisterable):
         Returns the label text to be used for the menu item.
         """
         return self.menu_label or self.opts.verbose_name_plural.title()
+
+    def get_menu_item_name(self):
+        """
+        Returns the name to be used for the menu item.
+        """
+        return self.menu_item_name
 
     def get_menu_icon(self):
         """
@@ -699,6 +706,7 @@ class ModelAdminGroup(WagtailRegisterable):
 
     items = ()
     menu_label = None
+    menu_item_name = None
     menu_order = None
     menu_icon = None
 
@@ -714,6 +722,9 @@ class ModelAdminGroup(WagtailRegisterable):
 
     def get_menu_label(self):
         return self.menu_label or self.get_app_label_from_subitems()
+
+    def get_menu_item_name(self):
+        return self.menu_item_name
 
     def get_app_label_from_subitems(self):
         for instance in self.modeladmin_instances:
